--- a/.github/workflows/preview.yml
+++ b/.github/workflows/preview.yml
@@ -19,3 +19,5 @@ jobs:
         uses: actions/checkout@v2
       - name: Deploy preview
         uses: rossjrw/pr-preview-action@v1
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
