--- a/.github/workflows/preview.yml
+++ b/.github/workflows/preview.yml
@@ -15,3 +15,7 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v2
+      - uses: rossjrw/pr-preview-action@v1
+        with:
+          source-dir: .
+          action: auto
