--- a/.github/workflows/preview.yml
+++ b/.github/workflows/preview.yml
@@ -1,22 +1,23 @@
-# .github/workflows/preview.yml
-name: Deploy PR previews
+name: Validate and Auto Publish
 
 on:
-  pull_request:
-    types:
-      - opened
-      - reopened
-      - synchronize
-      - closed
+  push:
+    branches:
+      - gh-pages
+  pull_request: {}
 
 jobs:
-  deploy-preview:
-    runs-on: ubuntu-20.04
+  validate-and-publish:
+    name: Validate and Publish
+    runs-on: ubuntu-20.04 # only linux supported at present
     steps:
-      - name: Checkout
-        uses: actions/checkout@v2
-      - uses: rossjrw/pr-preview-action@v1
+      - uses: actions/checkout@v2
+      - uses: w3c/spec-prod@v2 # use the action
         with:
-          source-dir: .
-          action: auto
-          repo-token: ${{ secrets.GITHUB_TOKEN }}
+          W3C_ECHIDNA_TOKEN: ${{ secrets.ECHIDNA_TOKEN }}
+          W3C_WG_DECISION_URL: "https://lists.w3.org/Archives/Public/public-webrtc/2016Mar/0031.html"
+          W3C_NOTIFICATIONS_CC: "eggerlienz@web.de"
+          VALIDATE_LINKS: false
+          W3C_BUILD_OVERRIDE: |
+            specStatus: WD
+            shortName: screen-capture  
