--- a/.github/workflows/preview.yml
+++ b/.github/workflows/preview.yml
@@ -1,23 +1,21 @@
-name: Validate and Auto Publish
+name: Deploy PR previews
 
 on:
-  push:
-    branches:
-      - gh-pages
-  pull_request: {}
+  pull_request:
+    types:
+      - opened
+      - reopened
+      - synchronize
+      - closed
 
 jobs:
-  validate-and-publish:
-    name: Validate and Publish
-    runs-on: ubuntu-20.04 # only linux supported at present
+  deploy-preview:
+    runs-on: ubuntu-20.04
     steps:
-      - uses: actions/checkout@v2
-      - uses: w3c/spec-prod@v2 # use the action
+      - name: Checkout
+        uses: actions/checkout@v2
+      - uses: rossjrw/pr-preview-action@v1
         with:
-          W3C_ECHIDNA_TOKEN: ${{ secrets.ECHIDNA_TOKEN }}
-          W3C_WG_DECISION_URL: "https://lists.w3.org/Archives/Public/public-webrtc/2016Mar/0031.html"
-          W3C_NOTIFICATIONS_CC: "eggerlienz@web.de"
-          VALIDATE_LINKS: false
-          W3C_BUILD_OVERRIDE: |
-            specStatus: WD
-            shortName: screen-capture  
+          source-dir: .
+          action: auto
+          repo-token: ${{ secrets.GITHUB_TOKEN }}
